--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,12 @@
   <groupId>alura</groupId>
   <artifactId>seven-days-of-code</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.2</version>
+        </dependency>
+    </dependencies>
 </project>
